Fix for buttons overlapping

--- a/ExilePartyClient/src/app/authorize/components/char-profile/char-wealth/char-wealth.component.scss
+++ b/ExilePartyClient/src/app/authorize/components/char-profile/char-wealth/char-wealth.component.scss
@@ -102,6 +102,6 @@
     }
 
     .full-height-table {
-        height: 80%;
+        height: 75%;
     }
 }
